# TexasSolver

./: CMakeLists.txt  PokerSolver.i  README.md  README.zh-CN.md  TexasSolverGui.pro  TexasSolverTechDemo.ipynb  boardselector.cpp  boardselector.h  boardselector.ui  build-AppImage.sh  compairer.qrc  htmltableview.cpp  htmltableview.h  lang_cn.qm  lang_cn.ts  lang_en.ts  licensed_list.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qstextedit.cpp  qstextedit.h  qstreeview.cpp  qstreeview.h  rangeselector.cpp  rangeselector.h  rangeselector.ui  settingeditor.cpp  settingeditor.h  settingeditor.ui  strategyexplorer.cpp  strategyexplorer.h  strategyexplorer.ui  translations.qrc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-discussion.md
.github/workflows/: cmake.yml  main.yml
benchmark/: benchmark_piosolver.txt  benchmark_texassolver.txt  texassolver.txt
benchmark/benchmark_outputs/: piosolver_log.txt  texassolver_log.txt
ext/googletest/googlemock/docs/: for_dummies.md
ext/googletest/googletest/src/: gtest-death-test.cc
imgs/: texassolver_logo.icns  texassolver_logo.rc
include/: Card.h  Deck.h  GameTree.h  card_format.h  json.hpp  library.h
include/compairer/: Compairer.h  Dic5Compairer.h
include/experimental/: TCfrSolver.h
include/nodes/: ActionNode.h  ChanceNode.h  GameActions.h  GameTreeNode.h  ShowdownNode.h  TerminalNode.h
include/ranges/: PrivateCards.h  PrivateCardsManager.h  RiverCombs.h  RiverRangeManager.h
include/runtime/: PokerSolver.h  qsolverjob.h
include/solver/: BestResponse.h  CfrSolver.h  PCfrSolver.h  Solver.h  TCfrSolver.h  cuda_cfr.h  cuda_func.h  slice_cfr.h
include/tools/: CommandLineTool.h  GameTreeBuildingSettings.h  PrivateRangeConverter.h  Rule.h  StreetSetting.h  argparse.hpp  logger.h  lookup8.h  progressbar.h  qdebugstream.h  tinyformat.h  utils.h
include/trainable/: CfrPlusTrainable.h  DiscountedCfrTrainable.h  DiscountedCfrTrainableHF.h  DiscountedCfrTrainableSF.h  Trainable.h
include/ui/: boardselectortabledelegate.h  boardselectortablemodel.h  detailitemdelegate.h  detailviewermodel.h  detailwindowsetting.h  droptextedit.h  htmltablerangeview.h  rangeselectortabledelegate.h  rangeselectortablemodel.h  roughstrategyitemdelegate.h  roughstrategyviewermodel.h  strategyitemdelegate.h  tablestrategymodel.h  treeitem.h  treemodel.h  worditemdelegate.h
install/: test.py  tree.km
install/python/: TreeBuilder.py  test.py
resources/bash/: replace.sh  riversolver.sh
resources/desktop/: TexasSolverGui.desktop
resources/ffi_api/: README.MD  dart_ffi.dart  python_ctypes.py
resources/gametree/: game_tree_flop.km  generated_tree.km  part_tree_depthinf.km  part_tree_turn_depthinf.km  part_tree_turn_withallin.km  simple_part_tree_depthinf.km
resources/outputs/: outputs_log.txt
resources/python/: TreeBuilder.py  java_interface.py  test.py
resources/text/: commandline_sample_input.txt  commandline_sample_input_shortdeck.txt
resources/yamls/: general_rule.yaml  rule_generated_game.yaml  rule_holdem_simple.yaml  rule_shortdeck_flopsolver.yaml  rule_shortdeck_simple.yaml  rule_shortdeck_turnriversolver.yaml  rule_shortdeck_turnsolver.yaml  rule_shortdeck_turnsolver_withallin.yaml
src/: Card.cpp  Deck.cpp  GameTree.cpp  api.cpp  card_format.cpp  console.cpp  library.cpp
src/compairer/: Dic5Compairer.cpp
src/experimental/: TCfrSolver.cpp
src/nodes/: ActionNode.cpp  ChanceNode.cpp  GameActions.cpp  GameTreeNode.cpp  ShowdownNode.cpp  TerminalNode.cpp
src/pybind/: bindSolver.cpp
src/ranges/: PrivateCards.cpp  PrivateCardsManager.cpp  RiverCombs.cpp  RiverRangeManager.cpp
src/runtime/: PokerSolver.cpp  qsolverjob.cpp
src/solver/: BestResponse.cpp  CfrSolver.cpp  PCfrSolver.cpp  Solver.cpp  TCfrSolver.cpp  cuda_cfr.cu  cuda_func.cu  slice_cfr.cpp
src/tools/: CommandLineTool.cpp  GameTreeBuildingSettings.cpp  PrivateRangeConverter.cpp  Rule.cpp  StreetSetting.cpp  logger.cpp  lookup8.cpp  progressbar.cpp  utils.cpp
src/trainable/: CfrPlusTrainable.cpp  DiscountedCfrTrainable.cpp  DiscountedCfrTrainableHF.cpp  DiscountedCfrTrainableSF.cpp  Trainable.cpp
src/ui/: boardselectortabledelegate.cpp  boardselectortablemodel.cpp  detailitemdelegate.cpp  detailviewermodel.cpp  detailwindowsetting.cpp  droptextedit.cpp  htmltablerangeview.cpp  rangeselectortabledelegate.cpp  rangeselectortablemodel.cpp  roughstrategyitemdelegate.cpp  roughstrategyviewermodel.cpp  strategyitemdelegate.cpp  tablestrategymodel.cpp  treeitem.cpp  treemodel.cpp  worditemdelegate.cpp
test/: test.cpp
